--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -44,6 +44,17 @@ jobs:
         with:
           ruby-version: 3.4
           bundler-cache: true
+          
+      - name: Setup Node
+        uses: actions/setup-node@v5
+        with:
+          node-version: 'lts/*'
+
+      - name: Build Assets
+        run: |
+          npm install
+          npm run build
+      
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
