--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,10 +6,10 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
+P0LESTAR:
+  name: P0LESTAR
+  #twitter: cotes2020
+  #url: https://github.com/P0LESTAR/
 
 sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
